fixed layout issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -120,8 +120,8 @@ body {
   padding-bottom: .5em
 }
 @media screen and (min-width: 1200px) {
-  main {
-    padding-top: 4.5em
+  main #home {
+    padding-top: 45px
   }
   header {
     background: #fff;
